Force reset password for initial admin user, and now enverre.ini is optional.
